# alif_conductor-demo

./: .gitmodules  CMakeLists.txt  Conductor-Tool.md  README.md  app-device-config-memory_stitching.json  conductor_tool_demo.c  conductor_tool_demo_SE_memory_stitching.json  conductor_tool_demo_mram.json  conductor_tool_demo_mram_memory_stitching.json  conductor_tool_demo_tcm.json  conductor_tool_demo_tcm_memory_stitching.json  dct_demo.c  dct_demo_mram.json  dct_demo_tcm.json  dct_demo_tcm_memory_stitching.json  gcc_M55_HP_MRAM.ld  gcc_M55_HP_TCM.ld  toolchain-armclang.cmake  toolchain-gnu.cmake  toolchain-iar.cmake
RTE/: RTE_Components.h  RTE_Device.h  board.h  mpu_M55.c
linker/: arm_M55_HE_MRAM.sct  arm_M55_HE_TCM.sct  arm_M55_HP_MRAM.sct  arm_M55_HP_TCM.sct  gcc_M55_HE_MRAM.ld  gcc_M55_HE_TCM.ld  iar_M55_HE_MRAM.icf  iar_M55_HE_TCM.icf  iar_M55_HP_MRAM.icf  iar_M55_HP_TCM.icf
